Added Map for bodygroup